--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <meta name="description" content="Welcome to Fifth Fortune, the only online casino where you can play the thrilling game of Limbo. With its simple rules and exciting gameplay, Limbo is the perfect game for both casual and serious gamblers. Join us today and see if you have what it takes to win big!" />
     <meta property="og:title" content="Fifth Fortune - The Ultimate Limbo Experience" />
     <meta property="og:description" content="Play Limbo, the exciting game available at Fifth Fortune, the premier online casino. With simple rules and big rewards, Limbo is the perfect game for anyone looking for a thrilling gambling experience." />
-    <meta property="og:image" content="https://fifthfortune.netlify.app/logo-white.png" />
+    <meta property="og:image" content="https://fifthfortune.netlify.app/assets/logo-white.png" />
     <meta property="og:url" content="https://www.fifthfortune.netlify.app/" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <link rel="icon" href="icon-only-white.svg" type="image">
+    <link rel="icon" href="assets/icon-only-white.svg" type="image">
 </head>
 <body>
     <header>
         <div class="logo"><a href="index.html">Fifth Fortune</a></div>
         <div class="wallet">
             <div class="amount"><div class="amount-text">0.00</div></div>
-            <button class="dep-button" onclick="depAmount()"><img src="deposit.svg" alt=""></button>
-            <button class="with-button" onclick="withAmount()"><img src="minus-svgrepo-com.svg" alt=""></button>
+            <button class="dep-button" onclick="depAmount()"><img src="assets/deposit.svg" alt=""></button>
+            <button class="with-button" onclick="withAmount()"><img src="assets/minus-svgrepo-com.svg" alt=""></button>
         </div>
     </header>
     <main>
